--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -4,39 +4,55 @@ on:
   push:
     branches:
       - master
+  pull_request:
+    branches:
+      - master
 
 env:
   DOCKERHUB_REPOSITORY: slav123/prom
 
 jobs:
-  deploy:
-    name: Deploy
+  build-and-push:
+    name: Build and Push
     runs-on: ubuntu-latest
     environment: production
+    permissions:
+      contents: read
+      packages: write
 
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
       - name: Log in to Docker Hub
-        uses: docker/login-action@v2
+        if: github.ref == 'refs/heads/master'
+        uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_ACCESS_TOKEN }}
 
-      - name: Build, tag, and push images to Docker Hub
-        id: build-image
-        env:
-          IMAGE_TAG: ${{ github.sha }}
+      # Set up tags
+      - name: Set Docker tags
+        id: tags
         run: |
-          # Build and push the image with the commit SHA tag
-          docker build -t ${{ env.DOCKERHUB_REPOSITORY }}:$IMAGE_TAG .
-          docker push ${{ env.DOCKERHUB_REPOSITORY }}:$IMAGE_TAG
+          TAGS="${{ env.DOCKERHUB_REPOSITORY }}:${{ github.sha }}"
+          if [[ ${{ github.ref }} == 'refs/heads/master' ]]; then
+            TAGS="$TAGS,${{ env.DOCKERHUB_REPOSITORY }}:latest"
+          fi
+          echo "tags=$TAGS" >> $GITHUB_OUTPUT
 
-          # Tag the image as 'latest' and push
-          docker tag ${{ env.DOCKERHUB_REPOSITORY }}:$IMAGE_TAG ${{ env.DOCKERHUB_REPOSITORY }}:latest
-          docker push ${{ env.DOCKERHUB_REPOSITORY }}:latest
-
-          # Output both image references
-          echo "image=${{ env.DOCKERHUB_REPOSITORY }}:$IMAGE_TAG" >> $GITHUB_OUTPUT
-          echo "latest_image=${{ env.DOCKERHUB_REPOSITORY }}:latest" >> $GITHUB_OUTPUT
+      - name: Build and push
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          platforms: linux/amd64,linux/arm64
+          push: ${{ github.ref == 'refs/heads/master' }}
+          tags: ${{ steps.tags.outputs.tags }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
