--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -2,11 +2,9 @@ name: Deploy to Docker Hub
 
 on:
   push:
-    branches:
-      - master
+    branches: [ main ]
   pull_request:
-    branches:
-      - master
+    branches: [ main ]
 
 env:
   DOCKERHUB_REPOSITORY: slav123/prom
